fixed css z-index stuff

--- a/components/layout/alerts.module.css
+++ b/components/layout/alerts.module.css
@@ -10,7 +10,7 @@
   bottom: 4.25rem;
 
   font-family: "Source Sans Pro", sans-serif;
-  z-index: calc(var(--top-z) + 1);
+  z-index: calc(var(--top-z) - 1);
 }
 
 /* Individual Alert */
